# Scrapper

./: .gitignore  .gitmodules  CMakeLists.txt  GenVS22.bat  TODO.md  dependencies.lua  premake5.lua
Source/: Base.h  Search.cpp  Search.h  main.cpp
Source/Core/: Application.cpp  Application.h  Base.h  Definitions.h  ImGuiLayer.cpp  ImGuiLayer.h  Search.cpp  Search.h  Window.cpp  Window.h
Source/Embedded/Fonts/: MaterialDesign.inl  RobotoBold.inl  RobotoMedium.inl  RobotoRegular.inl
Source/Events/: Event.h  KeyEvent.h  MouseEvent.h  WindowEvent.h
Tools/: premake5.lua
